--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
