--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "resend": "^4.0.0",
     "server-actions-example": "file:",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
